# LearnOpenGL

./: CMakeLists.txt  setup.sh
Shader Files/: shader.fs  shader.vs
src/: Shader.cpp  Shader.hpp  main.cpp
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
